tests/parse_print/random_perturb/enum_liberated/change-10/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/enum_liberated/change-10/change-10.essence:6:2:
Malformed expression, Shunting Yard failed.
    l+tting E2 be new type enum {a, b, c, d, "hoh hoh hooo"}
     ^